Fixed: All tablet layout issues

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -7,7 +7,7 @@
 }
 
 html{
-    max-width: 100vw;
+    width: 100vw;
     overflow-x: hidden;
 }
 
@@ -17,6 +17,7 @@ body{
     color: u.$color-primary;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    overflow-x: hidden;
 
     &::-webkit-scrollbar {
         display: none;
