--- a/src/sass/pages/_featured-projects.scss
+++ b/src/sass/pages/_featured-projects.scss
@@ -3,6 +3,9 @@
 .featured-projects{
     text-align: center;
     padding-bottom: 70px;
+    @include u.tablet-only{
+        padding-bottom: 100px;
+    }
 }
 
 .featured-projects__title{
